--- a/materials/07-glm.qmd
+++ b/materials/07-glm.qmd
@@ -24,6 +24,14 @@ set.seed(123)
 
 ## Association analysis
 
+```{r}
+#| echo: false
+
+xs <- sample(0:2, 100, replace = TRUE)
+ys <- rnorm(length(xs), mean = model.matrix(~ xs) %*% c(0, 1))
+plot(xs, ys)
+```
+
 Command to run GLM:
 
 ```bash
