--- a/materials/07-glm.qmd
+++ b/materials/07-glm.qmd
@@ -8,73 +8,84 @@ knitr::opts_knit$set(root.dir = "../course_files")
 set.seed(123)
 ```
 
-# Association analysis
+# Running GWAS
 
 :::{.callout-tip}
 #### Learning objectives
 
-- Summarise the statistical methods used by PLINK to carry out trait-genotype association tests.
 - Fit a GLM model to trait data using PLINK both with and without covariates.
 - Generate Q-Q plots for the p-values from the association test, to assess over- or under-inflation issues.
 - Recognise and apply correction for population structure in the GLM model.
-- Produce Manhattan plots to visualise the association results across the genome.
-- Explore the association results and refine visualisations to focus on particular regions of interest.
+
 :::
 
 
-## Association analysis
+## GLM
 
-```{r}
-#| echo: false
+Fitting a genotypic linear model to our traits with PLINK can be done using the `--glm` option (for "generalised linear model"). 
+We also need to provide a phenotype file, which is tab-delimited with the first two columns being the family and sample IDs, and remaining columns the traits. 
+PLINK will automatically detect whether the traits are continous or binary and fit a model accordingly. 
 
-xs <- sample(0:2, 100, replace = TRUE)
-ys <- rnorm(length(xs), mean = model.matrix(~ xs) %*% c(0, 1))
-plot(xs, ys)
-```
-
-Command to run GLM:
+As before, we apply the quality filters discussed in previous sections. 
+Here is the full command: 
 
 ```bash
-plink2 \
-  --pfile data/plink/1000G_subset \
-  --out results/1000G_subset_nocovar \
-  --maf 0.01 --hwe 0.001 keep-fewhet \
+plink2 --pfile data/plink/1000G_subset --out results/1000G_subset_nocovar \
+  --geno 0.05 --maf 0.01 --hwe 0.001 keep-fewhet \
+  --mind 0.05 --keep results/1000G_subset.king.cutoff.in.id \
   --pheno data/phenotypes.tsv \
   --glm allow-no-covars
 ```
 
-Setup our R session:
+This command outputs one file for each trait. 
+The file extensions are `.glm.linear` for quantitative traits and `.glm.logistic.hybrid` for binary traits. 
 
 
-```{r}
+:::{.callout-important}
+#### Set up your R session
+
+If you haven't done so already, start an R session with the following packages loaded: 
+
+```{r load-packages}
 # load the libraries
 library(tidyverse) # data manipulation
 library(patchwork) # to compose plots
 library(janitor)   # to clean column names
-theme_set(theme_minimal())
+theme_set(theme_minimal()) # change default ggplot2 theme
 ```
 
+:::
 
-Import the data and create custom theme for Manhattan plots: 
+
+## Q-Q plots
+
+The results files are tab-delimited, which we can read into R as usual. 
+We start with one of our quantiative traits, blood pressure: 
 
 ```{r}
-coffee <- read_tsv("results/1000G_subset_nocovar.coffee.glm.linear") |> 
+blood_nocovar <- read_tsv("results/1000G_subset_nocovar.blood.glm.linear") |> 
   clean_names()
-  
-manhattan_theme <- theme_minimal() +
-  theme(
-    axis.text.x = element_blank(),
-    axis.ticks.x = element_blank(),
-    panel.grid = element_blank(),
-    panel.spacing = unit(0.1, "lines"),
-    strip.background = element_blank()
-  )
+
+head(blood_nocovar)
 ```
+
+We can look at the distribution of our p-values using a histogram.
+
+http://varianceexplained.org/statistics/interpreting-pvalue-histogram/
+
+```{r}
+blood_nocovar |> 
+  ggplot(aes(p)) +
+  geom_histogram(binwidth = 0.01)
+```
+
+This looks relatively uniform towards the right-end of the distribution, but there's quite a sharp skew towards the low end. 
+This may indicate some p-value inflation due to unaccounted confounders. 
 
 Q-Q plot: 
 
 ```{r}
-coffee |> 
+blood_nocovar |> 
   arrange(p) |> 
   mutate(expected = -log10(ppoints(n())), 
          observed = -log10(p)) |> 
@@ -89,22 +100,9 @@ coffee |>
 Inflation factor:
 
 ```{r}
-median(qchisq(coffee$p, df=1, lower.tail = F), na.rm = T)/qchisq(0.5, 1)
+median(qchisq(blood_nocovar$p, df=1, lower.tail = F), na.rm = T)/qchisq(0.5, 1)
 ```
 
-Manhattan plot shows clear peaks, but generally inflated (notice everything is essentially above the threshold):
-
-```{r}
-coffee |> 
-  filter(p < 0.001) |> 
-  ggplot(aes(pos, -log10(p))) +
-  geom_point() +
-  geom_hline(yintercept = -log10(5e-8), colour = "firebrick", lwd = 1) +
-  facet_grid(~ number_chrom, 
-             scale = "free_x", 
-             space = "free_x") + 
-  manhattan_theme
-```
 
 We can look a distribution of our trait value across world regions and see there are differences across the continents, which will counfound the results:
 
@@ -114,7 +112,7 @@ sample_info <- read_tsv("data/sample_info.tsv")
 
 sample_info |> 
   full_join(pheno, by = c("individual_id" = "IID")) |> 
-  ggplot(aes(super_pop, coffee)) +
+  ggplot(aes(blood, population, fill = super_pop)) +
   geom_boxplot()
 ```
 
@@ -124,10 +122,9 @@ sample_info |>
 We now re-run the GLM, using PCA eigenvectors as covariates in the model:
 
 ```bash
-plink2 \
-  --pfile data/plink/1000G_subset \
-  --out results/1000G_subset_pca \
-  --maf 0.01 --hwe 0.001 keep-fewhet \
+plink2 --pfile data/plink/1000G_subset --out results/1000G_subset_pca \
+  --geno 0.05 --maf 0.01 --hwe 0.001 keep-fewhet \
+  --mind 0.05 --keep results/1000G_subset.king.cutoff.in.id \
   --pheno data/phenotypes.tsv \
   --glm \
   --covar results/1000G_subset.eigenvec
@@ -136,15 +133,15 @@ plink2 \
 We can import and visualise the new results:
 
 ```{r}
-coffee_pca <- read_tsv("results/1000G_subset_pca.coffee.glm.linear") |> 
+blood_pca <- read_tsv("results/1000G_subset_pca.blood.glm.linear") |> 
   clean_names()
   
 # retain only the SNP test results
-coffee_pca <- coffee_pca |> 
+blood_pca <- blood_pca |> 
   filter(test == "ADD")
 
 # histogram of p-values
-coffee_pval_hist <- coffee_pca |> 
+blood_pca |> 
   arrange(p) |> 
   mutate(expected = -log10(ppoints(n())), 
          observed = -log10(p)) |> 
@@ -154,7 +151,7 @@ coffee_pval_hist <- coffee_pca |>
   labs(title = "P-value histogram")
 
 # qqplot
-coffee_pval_qq <- coffee_pca |> 
+blood_pca |> 
   arrange(p) |> 
   mutate(expected = -log10(ppoints(n())), 
          observed = -log10(p)) |> 
@@ -163,51 +160,12 @@ coffee_pval_qq <- coffee_pca |>
   geom_point() +
   geom_abline() + 
   labs(title = "Q-Q plot")
-
-# manhattan plot
-coffee_pval_man <- coffee_pca |> 
-  filter(p < 0.01) |> 
-  ggplot(aes(pos, -log10(p))) +
-  geom_point() +
-  geom_hline(yintercept = -log10(5e-8), linetype = "dashed") +
-  facet_grid(~ number_chrom, 
-             scale = "free_x", 
-             space = "free_x",
-             switch = "x") +
-  labs(x = "Chromosome", 
-       title = "Manhattan plot") +
-  manhattan_theme
-```
-
-Compose plots: 
-
-```{r}
-((coffee_pval_hist + coffee_pval_qq) / coffee_pval_man) + 
-  plot_annotation(
-    title = "Caffeine consumption (mg/day)"
-  )
 ```
 
 Inflation factor:
 
 ```{r}
-median(qchisq(coffee_pca$p, df=1, lower.tail = F), na.rm = T)/qchisq(0.5, 1)
-```
-
-
-## Regional plots
-
-```{r}
-# Zoom in on one of the SNPs
-coffee_pca |> 
-  filter(number_chrom == 7 & pos > 17244953 - 250e3 & pos < 17244953 + 250e3) |> 
-  mutate(label = ifelse(p == min(p), 
-                        paste(number_chrom, pos, sep = ":"),
-                        NA)) |> 
-  ggplot(aes(pos, -log10(p))) +
-  geom_point() +
-  geom_text(aes(label = label), hjust = -0.1) +
-  geom_hline(yintercept = -log10(5e-8), linetype = "dashed")
+median(qchisq(blood_pca$p, df=1, lower.tail = F), na.rm = T)/qchisq(0.5, 1)
 ```
 
 
